[package]
name = "ranbumfy"
version = "0.1.1"
authors = ["Mateus Costa <mateuscomp@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to drawn albums from spotify"
readme = "README.md"
homepage = "https://github.com/mrcosta/ranbumfy"
repository = "https://github.com/mrcosta/ranbumfy"
keywords = ["cli", "spotify", "music"]
categories = ["command-line-utilities"]

[dependencies]
rspotify = "0.7.0"
rand = "0.6.1"
log = "0.4"
env_logger = "0.6.0"
clap = "2.32"

[dev-dependencies]
mockers = "0.13.1"
mockers_derive = "0.13.1"
assert_cli = "0.6.3"
