[package]
name = "ranbumfy"
version = "0.1.1"
authors = ["Mateus Costa <mateuscomp@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to drawn albums from spotify"
readme = "README.md"
homepage = "https://github.com/mrcosta/ranbumfy"
repository = "https://github.com/mrcosta/ranbumfy"
keywords = ["cli", "spotify", "music"]
categories = ["command-line-utilities"]
resolver = "2"

[dependencies]
rspotify = { version = "0.12", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls", "cli", "env-file"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
env_logger = "0.10"
clap = "2.34"

[dev-dependencies]
mockers = "0.13.1"
mockers_derive = "0.13.1"
assert_cli = "0.6.3"
